--- a/html/18_http.html
+++ b/html/18_http.html
@@ -175,8 +175,6 @@ name=Jean&amp;message=Yes%3F</pre>
 
 <p><a class="p_ident" id="p-HnfoDF3qKu" href="#p-HnfoDF3qKu" tabindex="-1" role="presentation"></a>Los datos que viajan por Internet tienden a seguir un largo y peligroso camino. Para llegar a su destino, deben pasar por cualquier cosa, desde puntos de acceso Wi-Fi de cafeterías hasta redes controladas por varias empresas y estados. En cualquier punto a lo largo de su ruta, pueden ser inspeccionados o incluso modificados.</p>
 
-<p><a class="p_ident" id="p-uYazI/itdp" href="#p-uYazI/itdp" tabindex="-1" role="presentation"></a>{{index manipulación}}</p>
-
 <p><a class="p_ident" id="p-b21n8u5IbZ" href="#p-b21n8u5IbZ" tabindex="-1" role="presentation"></a>Si es importante que algo se mantenga en secreto, como la contraseña de tu cuenta de correo electrónico, o que llegue a su destino sin modificaciones, como el número de cuenta al que transfieres dinero a través del sitio web de tu banco, HTTP simple no es suficiente.</p>
 
 <p><a class="p_ident" id="p-q6s/2UXNiF" href="#p-q6s/2UXNiF" tabindex="-1" role="presentation"></a>El protocolo seguro HTTP, utilizado para URLs que comienzan con <em>https://</em>, envuelve el tráfico HTTP de una manera que dificulta su lectura y manipulación. Antes de intercambiar datos, el cliente verifica que el servidor sea quien dice ser, solicitándole que demuestre que tiene un certificado criptográfico emitido por una autoridad de certificación que el navegador reconoce. Luego, todos los datos que pasan por la conexión están encriptados de una manera que debería evitar el espionaje y la manipulación.</p>
@@ -297,7 +295,7 @@ tres
 
 <h2><a class="h_ident" id="h-I8C+LttXH2" href="#h-I8C+LttXH2" tabindex="-1" role="presentation"></a>El formulario en su totalidad</h2>
 
-<p><a class="p_ident" id="p-mHu2Pi31L8" href="#p-mHu2Pi31L8" tabindex="-1" role="presentation"></a>{{index “objeto similar a un array”, “formulario (etiqueta HTML)”, “propiedad formulario”, “propiedad elementos”}}Cuando un field está contenido en un elemento <code>&lt;form&gt;</code>, su elemento DOM tendrá una propiedad <code>form</code> que enlaza de vuelta al elemento DOM del formulario. El elemento <code>&lt;form&gt;</code>, a su vez, tiene una propiedad llamada <code>elements</code> que contiene una colección similar a un array de los campos dentro de él.</p>
+<p><a class="p_ident" id="p-wQwycJHlbV" href="#p-wQwycJHlbV" tabindex="-1" role="presentation"></a>Cuando un field está contenido en un elemento <code>&lt;form&gt;</code>, su elemento DOM tendrá una propiedad <code>form</code> que enlaza de vuelta al elemento DOM del formulario. El elemento <code>&lt;form&gt;</code>, a su vez, tiene una propiedad llamada <code>elements</code> que contiene una colección similar a un array de los campos dentro de él.</p>
 
 <p><a class="p_ident" id="p-4HjtBqUpKB" href="#p-4HjtBqUpKB" tabindex="-1" role="presentation"></a>El atributo <code>name</code> de un campo de formulario determina la forma en que se identificará su valor cuando se submitee el formulario. También se puede utilizar como nombre de propiedad al acceder a la propiedad <code>elements</code> del formulario, la cual actúa tanto como un objeto similar a un array (accesible por número) como un mapa (accesible por nombre).</p>
 
